--- a/styleguide/source/assets/scss/03-organisms/_member-feature.scss
+++ b/styleguide/source/assets/scss/03-organisms/_member-feature.scss
@@ -10,33 +10,32 @@
       flex-direction: column;
       justify-content: flex-end;
       align-items: flex-end;
-      margin-top: 0;
+      height: 70%;
+
+      & div a {
+        display: block;
+      }
+
+      @include breakpoint($bp-small) {
+        & div a {
+          display: flex;
+        }
+      }
     }
 
     @include breakpoint($bp-small) {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      grid-column-gap: $gutter;
+      grid-template-columns: 2fr 1fr;
       background: $gray-7;
 
       .ama__hero-story {
         grid-column-start: 1;
-        grid-column-end: 4;
+        grid-column-end: 1;
+        justify-content: flex-end;
       }
 
-      .ama__member-feature-rail {
-        grid-column-start: 4;
-      }
-    }
-
-    @include breakpoint($bp-med) {
-      .ama__hero-story {
-        grid-column-start: 1;
-        grid-column-end: 4;
-        justify-content: flex-start;
-      }
       .ama__hero-story__media {
-        margin-right: $gutter*-1;
+        margin-right: $gutter * -4;
 
         img {
           height: 100%;
@@ -45,7 +44,22 @@
       }
 
       .ama__member-feature-rail {
-        grid-column-start: 4;
+        grid-column-start: 2;
+      }
+    }
+
+    @include breakpoint($bp-med) {
+      .ama__hero-story {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        justify-content: flex-start;
+      }
+      .ama__hero-story__media {
+        margin-right: $gutter * -8;
+      }
+
+      .ama__member-feature-rail {
+        grid-column-start: 2;
       }
     }
   }
